--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -245,8 +245,8 @@ input, select, textarea, button {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(15, 17, 23, 0.5);
-  backdrop-filter: blur(3px);
+  background-color: rgba(15, 17, 23, 0.2);
+  backdrop-filter: blur(1px);
   z-index: 999;
   opacity: 0;
   visibility: hidden;
